# py_web_module_7

./: .gitignore  README.md
from_m6_hw_v2/: README.md  Script-1.py  Script-1.sql  Script-10.py  Script-10.sql  Script-2.py  Script-2.sql  Script-3.py  Script-3.sql  Script-4.py  Script-4.sql  Script-5.py  Script-5.sql  Script-6.py  Script-6.sql  Script-7.py  Script-7.sql  Script-8.py  Script-8.sql  Script-9.py  Script-9.sql  connect.py  create-tables.sql  create.py  fill_data.py  hw6-select.sql  insert.py  pyproject.toml  query_01.sql  select2.py  test1.py  update.py
